quoting-CypressTK1/force-app/main/default/objects/NamedRangeTotal__c/fields/AdjustedBaseAmount__c.field-meta.xml
<CustomField>
    <fullName>AdjustedBaseAmount__c</fullName>
    <description>Adjusted base amount</description>
    <label>Adjusted Base Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>