quoting-CypressTK1/force-app/main/default/objects/NamedRangeTotal__c/fields/BaseExtendedAmount__c.field-meta.xml
<CustomField>
    <fullName>BaseExtendedAmount__c</fullName>
    <label>Base Extended Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>