quoting-CypressTK1/force-app/main/default/objects/NamedRangeTotal__c/fields/BaseExtendedCost__c.field-meta.xml
<CustomField>
    <fullName>BaseExtendedCost__c</fullName>
    <label>Base Extended Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>